2019-06-08  Charlie Zender  <zender@uci.edu>

	* NCO 4.8.1-alpha06 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.8.1-alpha06: School of Rock';git push
	git tag -a 4.8.1-alpha06 -m 'ncremap --msh_fl;Cori tweaks;ncks xtr_mth mss_val';git push --tags

	* Move nco_nmn_get() and nco_lbr_vrs_prn/() from nco_ctl.c to nco_scm.c, re-jigger version banner

	* nco_ntp_vrt() handle xtr_mth option with rgr parameter database

	* nco_ntp_vrt() add _FillValue attributes if necessary when missing value extrapolation requested

	* nco_ntp_vrt() pre-screen to determine whether extrapolation necessary

2019-06-07  Charlie Zender  <zender@uci.edu>

	* ncremap outputs intersection meshfile with --msh_fl

	* Cori add '-C knl' to interactive queue requests

	* Remove gsl and udunits modules from NCO_PATH_OVERRIDE actions on Cori

	* NCO 4.8.1-alpha05 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.8.1-alpha05: Tampa Mockingbird';git push
	git tag -a 4.8.1-alpha05 -m 'ncremap MWF w/o tempest, blues MPI, xtr_fll_msv, AppVeyor fix';git push --tags

	* ncremap skip Tempest alg_typ 'tempest' in MWF mode when called with .nc grids

	* ncclimo/ncremap choose correct batch and MPI type for	blues/anvil, requested by Balwinder Singh

	* nco_ntp_vrt() missing value extrapolation works, still need to add _FillValue attribute and option

	* nco_ntp_vrt() add hooks to create _FillValue attribute after extrapolating to missing values

2019-06-06  Charlie Zender  <zender@uci.edu>

	* nco_ntp_vrt() add stubs for extrapolation to missing value

2019-06-05  Charlie Zender  <zender@uci.edu>

	* nco_ntp_vrt() re-use existing dmn_ids_out array to fix new AppVeyor breakage

	* Merge Filipe's patch to fix old AppVeyor breakage

2019-06-04  Charlie Zender  <zender@uci.edu>

	* NCO 4.8.1-alpha04 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.8.1-alpha04: Taco Al Pastor';git push